--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.21.4.1 2012/04/17 00:09:16 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.21.4.2 2012/07/03 07:04:53 akarelia Exp $
 *
 */
 -->
@@ -162,7 +162,7 @@
 		</field>
 		<field attribute="show_diff">
 			<display_name>Show content difference</display_name>
-			<note>Allows user to compare contents of two different assets. Optionally a paint layout cant be passed for each of the assets to check the difference with.</note>
+			<note>Allows user to compare contents of two different assets. Optionally a paint layout can be passed for each of the assets to check the difference with.</note>
 		</field>
    </section>
     <section name="Linking" write_access="write:attributes">
@@ -223,7 +223,7 @@
         <field attribute="get_url_from_lineage">
             <display_name>Get URL From Lineage</display_name>
             <note />
-        </field>	
+        </field>
     </section>
     <section name="Metadata" write_access="write:attributes">
         <field attribute="get_metadata">
