--- a/packages/cms/page_templates/page_whats_new/locale/en/lang_screen_details.xml
+++ b/packages/cms/page_templates/page_whats_new/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.13 2010/03/09 01:25:31 lwright Exp $
+* $Id: lang_screen_details.xml,v 1.13.14.1 2012/07/18 08:35:52 akarelia Exp $
 *
 */
 -->
@@ -42,6 +42,18 @@
 				<paint_function   name="paintLinkTypes"  />
 				<process_function name="processLinkTypes" />
 			</function_call>
+		</field>
+		<field attribute="link_value_filter">
+			<display_name>Link Value</display_name>
+			<note>The value provided in that field will be used to filter the assets returned. You will need to enable 'Link Value Filtering'.</note>
+		</field>
+		<field attribute="link_value_filter_logic">
+			<display_name>Link Value Filtering Logic</display_name>
+			<note>This specifies if assets returned should have link value equal or diffrent from the 'Link Value' field. You will need to enable 'Link Value Filtering'.</note>
+		</field>
+		<field attribute="link_value_filter_enabled">
+			<display_name>Enable Link Value Filtering</display_name>
+			<note>If set to 'Yes' and lookup direction is set to 'down the tree', only assets with the link value equal to the 'Link Value' field will be returned. If set to 'Yes' and the lookup direction is set as 'up the tree', only parents of children assets with the link value equal to the 'Link Value' field will be returned.</note>
 		</field>
 	</section>
 	<section name="Dynamic Parameters">
