--- a/core/assets/data_source/data_source/locale/en/lang_screen_filters.xml
+++ b/core/assets/data_source/data_source/locale/en/lang_screen_filters.xml
@@ -1,6 +1,3 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<?xml-stylesheet href="../../../packages/asset.xsl" type="text/xsl"?>
-
 <!--
 /**
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
@@ -13,20 +10,30 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: asset.xml,v 1.3 2012/07/25 05:05:30 cupreti Exp $
+* $Id: lang_screen_filters.xml,v 1.1 2012/07/25 05:05:30 cupreti Exp $
 *
 */
 -->
 
-<asset_info xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="../../../packages/asset.xsd">
-	<package>__core__</package>
-	<type_code>data_source</type_code>
-	<version>0.1</version>
-	<name>Data Source</name>
-	<description>Data Source has to be extended and its children can be instantiable</description>
-	<instantiable>no</instantiable>
-	<allowed_access>backend_user</allowed_access>
-	<parent_type>asset</parent_type>
-	<requirements />
-	<flash_menu_path />
-</asset_info>
+<contents>
+	<section name="Filter Options">
+		<field attribute="filter_enabled">
+			<display_name>Filter Status</display_name>
+		</field>	
+		<field attribute="filter_logic">
+			<display_name>Logical Grouping</display_name>
+		</field>
+		<field attribute="filter_mode">
+			<display_name>Filter Mode</display_name>
+		</field>
+	</section>
+	<section name="Record Filters">		
+		<field>
+			<display_name>Conditions</display_name>
+			<function_call>
+				<paint_function name="paintRecordFilter" />
+				<process_function name="processRecordFilter" />
+			</function_call>
+		</field>
+	</section>
+</contents>
