--- a/packages/data/locale/en/lang_errors.xml
+++ b/packages/data/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.4 2011/03/23 21:57:58 cupreti Exp $
+* $Id: lang_errors.xml,v 1.5 2012/07/25 05:19:29 cupreti Exp $
 *
 */
 
@@ -25,4 +25,5 @@
 	<error code="DATA0001"><![CDATA[SQL Execution Error:<br/>Error: %1$s<br/>SQL: %2$s]]></error>
 	<error code="DATA0005">Cannot create LDAP Bridge asset for LDAP datasoruce asset</error>
 	<error code="DATA0006">Cannot acquire locks on datasource's LDAP bridge asset #%1$s</error>
+	<error code="DATA0007">Specified string "%1$s" is not a valid regular expression</error>
 </errors>
