--- a/packages/bulkmail/bulkmail_job/locale/en/lang_screen_scheduling.xml
+++ b/packages/bulkmail/bulkmail_job/locale/en/lang_screen_scheduling.xml
@@ -10,13 +10,24 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: edit_interface_create.xml,v 1.4 2012/08/22 05:59:35 akarelia Exp $
+* $Id: lang_screen_scheduling.xml,v 1.1 2012/08/22 05:59:35 akarelia Exp $
 *
 */
 -->
 
-<contents screen="details">
-	<section name="Details">
-		<field attribute="name" />
+<contents>
+	<section name="Bulkmail Job Scheduling">
+		<field attribute="scheduling_status">
+			<display_name>Enabled</display_name>
+			<note />
+		</field>
+		<field>
+			<display_name>Scheduling Details</display_name>
+			<note />
+			<function_call>
+				<paint_function   name="paintScheduling"   />
+				<process_function name="processScheduling" />
+			</function_call>
+		</field>
 	</section>
 </contents>
