--- a/packages/bulkmail/trigger_action_types/trigger_action_schedule_bulkmail_job/locale/en/lang_strings.xml
+++ b/packages/bulkmail/trigger_action_types/trigger_action_schedule_bulkmail_job/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.1 2012/08/22 06:06:00 akarelia Exp $
+* $Id: lang_strings.xml,v 1.2 2012/08/24 03:51:20 akarelia Exp $
 *
 *
 */
@@ -23,4 +23,5 @@
 	<string source="filters">Filters</string>
 	<string source="enable_subscription_filter">Enable Subscription Filter</string>
 	<string source="bulkmail_job_already_scheduled">Trigger Action cannot schedule the Bulkmail Job. Job already Scheduled and Waiting To Run.</string>
+	<string source="new_category">New Category</string>
 </strings>
